[package]
name = "monsoon-server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
lazy_static = "1.4.0"
prost = "0.11.8"
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.12"
tonic = "0.9.1"


[build-dependencies]
tonic-build = "0.9.1"
